# refractory

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  init_and_run.sh  manage.py  package-lock.json  package.json  pyproject.toml  run.sh  tailwind.config.js  win_run.bat
.github/workflows/: publish-docker.yml
license/: leveldb.txt
src/: foundry_interaction.py  foundry_resource.py  leveldb.py  main.py  management_app.py  refractory_settings.py  vtt_interaction.py  web_server.py
src/multifoundry/: apps.py  asgi.py  environment.py  settings.py  urls.py  wsgi.py
src/multifoundry_home/: admin.py  apps.py  models.py  urls.py  views.py
src/multifoundry_home/migrations/: 0001_initial.py  0002_foundryversion_downloaded_and_more.py  0003_foundryinstance_foundry_version.py  0004_remove_foundryversion_downloaded_and_more.py  0005_foundryinstance_instance_slug_and_more.py  0006_foundrylicense_license_name.py  0007_foundryinstance_display_name.py  0008_alter_foundryinstance_instance_name.py  0009_managedfoundryuser.py  0010_managedfoundryuser_user_id.py  0011_foundryinstance_admin_pass_and_more.py  0012_managedfoundryuser_managed_gm.py  0013_foundryinstance_eula_accepted.py
src/multifoundry_home/models/: foundry_instance.py  foundry_models.py
src/multifoundry_home/templates/: _foundry_portal_base.html  _multifoundry_base.html  base.html  foundry_login.html  index.html  injected_admin_login.html  injected_login_button.html  login_to_instance.html  refractory_login.html  status_panel.html  test_page.html  versions.html
src/multifoundry_home/templatetags/: tailwind_tags.py
src/refractory/: asgi.py  environment.py  settings.py  urls.py  wsgi.py
src/refractory_home/: admin.py  apps.py  common_tasks.py  urls.py  views.py
src/refractory_home/migrations/: 0001_initial.py  0002_foundryinvite.py  0002_group_permissions.py  (+17 more)
src/templates/: foundry_login.html  versions.html
src/web_interaction/: foundry_interaction.py  foundry_resource.py  template_parse.py  template_rewrite.py  vtt_interaction.py
(+34 files in other folders)
