[tool.poetry]
name = "refractory"
version = "0.1.0"
description = "Foundry VTT Instance Manager"
authors = ["ForOhForError"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
twisted = "^22.10.0"
autobahn = {extras = ["twisted"], version = "^23.6.2"}
websockets = "^11.0.3"
django = "^5.0.1"
python-socketio = {extras = ["client"], version = "^5.11.4"}
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
