[project]
name = "refractory"
version = "0.1.0"
description = "Foundry VTT Instance Manager"
authors = [{ name = "ForOhForError" }]
requires-python = "~=3.10.0"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3",
    "twisted>=22.10.0,<23",
    "autobahn[twisted]>=23.6.2,<24",
    "websockets>=11.0.3,<12",
    "django>=5.0.1,<6",
    "python-socketio[client]>=5.11.4,<6",
    "beautifulsoup4>=4.12.2,<5",
]

[dependency-groups]
lint = [
    "black>=24.10.0,<25",
    "isort>=5.13.2,<6",
]

[tool.uv]
default-groups = ["lint"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
