[project]
name = "refractory"
version = "0.1.0"
description = "Foundry VTT Instance Manager"
authors = [{ name = "ForOhForError" }]
requires-python = "~=3.10.0"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3",
    "twisted>=22.10.0,<23",
    "autobahn[twisted]>=23.6.2,<24",
    "websockets>=11.0.3,<12",
    "django>=5.0.1,<6",
    "python-socketio[client]>=5.11.4,<6",
    "beautifulsoup4>=4.12.2,<5",
    "django-ratelimit>=4.1.0",
    "plyvel-ci>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
